fix overflowing tooltip positions

--- a/src/gui.css
+++ b/src/gui.css
@@ -24,14 +24,13 @@
 
 .AppBody {
     display: grid;
-    /* width: calc(100% - 10px); */
     height: calc(90% - 10px);
     padding: 5px;
 }
 
 .AppBody .Tooltip {
     position: absolute;
-    opacity: 0;
+    display: none;
     background-color: #ffffff;
     border: 2px solid #000000;
     border-radius: 5px;
@@ -48,6 +47,9 @@
 }
 .AppBody .Tooltip .Content .Text::after {
     content: "%";
+}
+.AppBody .Tooltip .Content .ChartDescription {
+    margin: 0;
 }
 
 .AppBody .MapContainer {
